<resources>
    <string name="app_name">OnBoardingPage</string>
    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
    <string name="title_menu_3">Code Review dari Developer Expert</string>
    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>
    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
    <string name="learn_now">Belajar Sekarang</string>
</resources>